dnl
dnl configure.in -- Process this file with autoconf to produce a configure script.
dnl
dnl $Header$
dnl

AC_INIT(petidomo.h)
AC_REVISION($Revision$)dnl

dnl Checks for paths and programs.
dnl
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LEX
if test "$LEX" != "flex"; then
    AC_MSG_WARN($LEX might not work for us. Please install flex if the build fails.)
fi
AC_PROG_YACC
if test "$YACC" != "bison -y"; then
    AC_MSG_WARN($YACC might not work for us. Please install bison if the build fails.)
fi

dnl Find out what sizes the types have.
dnl
AC_CHECK_SIZEOF(unsigned short, 2)
AC_CHECK_SIZEOF(unsigned int, 4)
AC_CHECK_SIZEOF(unsigned long, 4)

dnl Checks for typedefs
dnl
AC_CHECK_TYPE(ssize_t, long)

dnl Set special flags for gcc.
dnl
if test "$GCC" = yes; then
    CFLAGS="$CFLAGS -Wall -pedantic -pipe"
fi

dnl Remove '-g' from the compile flags.
dnl
CFLAGS=`echo $CFLAGS | sed -e "s/-g//"`

dnl Turn '-O2' to '-O3'.
dnl
CFLAGS=`echo $CFLAGS | sed -e "s/-O2/-O3/"`

dnl Write results.
dnl
AC_OUTPUT(Makefile)
