dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl NOTE: the beginning comments should be dnl'ed so we get the #!/bin/sh
dnl       at the very top of the configure script.
dnl
dnl Copyright 1995 by Gray Watson
dnl
dnl This file is part of the argv library.
dnl
dnl Permission to use, copy, modify, and distribute this software for
dnl any purpose and without fee is hereby granted, provided that the
dnl above copyright notice and this permission notice appear in all
dnl copies, and that the name of Gray Watson not be used in advertising
dnl or publicity pertaining to distribution of the document or software
dnl without specific, written prior permission.
dnl
dnl Gray Watson makes no representations about the suitability of the
dnl software described herein for any purpose.  It is provided "as is"
dnl without express or implied warranty.
dnl
dnl The author may be contacted at gray.watson@letters.com
dnl
dnl $Id$
dnl
AC_REVISION($Revision$)dnl
AC_INIT(argv.c)

dnl Checks for paths and programs.
dnl
AC_PROG_CC
AC_PROG_RANLIB

dnl Enable warning flags for gcc.
dnl
if test "$GCC" = yes; then
    CFLAGS="$CFLAGS -Wall -pedantic -ansi"
fi

dnl Remove '-g' and '-O2' from the compile flags.
dnl
CFLAGS=`echo $CFLAGS | sed -e "s/-g//" -e "s/-O2//"`

dnl Write results.
dnl
AC_OUTPUT(GNUmakefile)
